--- a/guides.html
+++ b/guides.html
@@ -33,7 +33,7 @@ table, th, td {
 
   <div>
     <header>
-      <table class="headline" style="width:100%"></table>
+      <table class="headline" style="width:1890px"></table>
 
         <img class="grlogo" src="img/grafit.png" alt="grafit logo">
     </header>
