--- a/yp.html
+++ b/yp.html
@@ -106,12 +106,11 @@ table, th, td {
   This is our plan table for this month:
   </h1>
 
-  <iframe class="cimreport" width="1700" height="700" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRb2j7TekO0IlKawiiZjE-IOWBJdrysPien9eCqjGSx0p18qTsjO0Q6c6NCS30LIpRyYrSbUydHL5_1/pubhtml?widget=true&amp;headers=false"></iframe>
+  <iframe class="cimreport" width="1700" height="700" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vS01dB_CkQkKvriXmitLHnmQtYvkXAQYGEZnO2Q09bq7wJtA-8dDLIjxlhFpn1CzB2xXiF0bIJ2uHMF/pubhtml?gid=1352125354&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
   <h1 class="KPIT">
     This is our plan table for this month:
     </h1>
-  <iframe class="kpi" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vS01dB_CkQkKvriXmitLHnmQtYvkXAQYGEZnO2Q09bq7wJtA-8dDLIjxlhFpn1CzB2xXiF0bIJ2uHMF/pubhtml?gid=1352125354&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
-
+  <iframe class="kpi" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vR_LgpeIHJZa12dI0V-pIBNQvcQGVgOm0STr23i9Svq7NS0XEYfnerDFNynmEylXZcm5myXEys1dL85/pubhtml?widget=true&amp;headers=false"></iframe>
 
 
 
